--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   permission_handler: ^11.4.0
   table_calendar: ^3.2.0
   intl: ^0.20.2
+  latlong2: ^0.9.1
+  flutter_map: ^8.1.1
+  flutter_map_location_marker: ^10.0.0
+  flutter_compass: ^0.8.0
 
 dev_dependencies:
   flutter_test:
