--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_map: ^8.1.1
   flutter_map_location_marker: ^10.0.0
   flutter_compass: ^0.8.0
+  background_locator_2: ^2.0.6
 
 dev_dependencies:
   flutter_test:
