--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,9 @@ dependencies:
   flutter_map: ^8.1.1
   flutter_map_location_marker: ^10.0.0
   flutter_compass: ^0.8.0
-  background_locator_2: ^2.0.6
+  sqflite: ^2.3.0
+  path_provider: ^2.1.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
